<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_string">Search</string>
    <string name="image_title">Image Title</string>
    <string name="image_results">Image Results</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="full_image_display">Full Image Display</string>
    <string name="share_image">Share</string>
    <string name="image_filter">Image Filter</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_settings">Edit Search Settings</string>
    <string name="settings_image_type_label">Type:</string>
    <string name="settings_image_size_label">Size:</string>
    <string name="settings_image_color_filter_label">Color:</string>
    <string name="settings_image_site_hint">Search website...</string>
    <string name="save_button_label">Save</string>

    <string-array name="imgType_array">
        <item>Not Selected</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item>Lineart</item>
    </string-array>
    <string-array name="imgSize_array">
        <item>Not Selected</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
    </string-array>
    <string-array name="imgColorFilter_array">
        <item>Not Selected</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string name="title_activity_filter">FilterActivity</string>
    <string name="button_ok">OK</string>

</resources>
