<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="imagesearch.codepath.com.gridimagesearch.activities.FilterActivity">


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/f_imgsize"
        android:layout_alignParentTop="true"
        android:spinnerMode="dropdown"
        android:entries="@array/imgSize_array"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/it_size" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/f_imgcolor"
        android:layout_below="@+id/f_imgsize"
        android:spinnerMode="dropdown"
        android:entries="@array/imgColorFilter_array"
        android:focusable="true"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/it_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_image_size_label"
        android:id="@+id/it_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/f_imgcolor"
        android:layout_alignRight="@+id/it_color"
        android:layout_alignEnd="@+id/it_color"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:textAlignment="gravity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_image_color_filter_label"
        android:id="@+id/it_color"
        android:layout_below="@+id/f_imgsize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="gravity"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/f_imgcolor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_image_type_label"
        android:id="@+id/it_type"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:textAlignment="gravity"
        android:layout_below="@+id/f_imgcolor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/f_type"
        android:layout_below="@+id/f_imgcolor"
        android:layout_alignRight="@+id/f_imgcolor"
        android:layout_alignEnd="@+id/f_imgcolor"
        android:layout_toRightOf="@+id/it_type"
        android:entries="@array/imgType_array"
        android:focusable="true"
        android:textSize="20dp"
        android:spinnerMode="dropdown" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/it_site"
        android:layout_below="@+id/f_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/f_imgcolor"
        android:layout_alignEnd="@+id/f_imgcolor"
        android:textSize="20dp"
        android:textAlignment="gravity"
        android:hint="@string/settings_image_site_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        android:id="@+id/bt_ok"
        android:layout_below="@+id/it_site"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:onClick="OnClickOKButton" />

</RelativeLayout>
